# aip-runner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ignore-check.yml
.github/workflows/.github/workflows/: ci.yml
examples/: article_pipeline.aip.json  article_with_artifacts.aip.json
examples/src/aip_runner/schema/: aip.schema.json
examples/src/aip_runner/schema/src/aip_runner/: cli.py
locales/: ru.json
src/aip_runner/: cli.py  i18n.py  mcp_client.py
src/aip_runner/locales/: en.json  ru.json
src/aip_runner/schema/: aip.schema.json
